name:                vhex
version:             0.1.0.0
synopsis:            A Vim-like hex editor
-- description: TODO
homepage:            https://github.com/hellux/vhex
license:             GPL-3
license-file:        LICENSE
author:              Noah Hellman
maintainer:          noah.hellman@protonmail.com
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/hellux/vhex

library
  exposed-modules:  VHex.Main
                    VHex.ByteZipper
  hs-source-dirs:   src
  build-depends:    base >=4.12 && <4.13
                  , text >=1.2 && <1.3
                  , bytestring >=0.10 && <0.11
                  , vty >=5.24 && <5.25
                  , microlens >=0.4 && <0.5
                  , brick >=0.47 && <0.48
  ghc-options:      -threaded -Wall -fno-warn-unused-do-bind

executable vhex
  main-is:          Main.hs
  build-depends:    base, vhex
  ghc-options:      -threaded -Wall -fno-warn-unused-do-bind
