name:                vhex
version:             0.1.0.0
synopsis:            A Vim-like hex editor
-- description: TODO
homepage:            https://github.com/hellux/vhex
license:             GPL-3
license-file:        LICENSE
author:              Noah Hellman
maintainer:          noah.hellman@protonmail.com
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/hellux/vhex

library
  default-language: Haskell2010
  exposed-modules:  VHex.Main
  other-modules:    VHex.Window
                    VHex.Window.ByteView
                    VHex.Window.Buffer
                    VHex.Window.Input
                    VHex.StatusLine
                    VHex.Command
                    VHex.ByteZipper
                    VHex.ListZipper
                    VHex.Types
                    VHex.Util
                    VHex.Attributes
  hs-source-dirs:   src
  build-depends:    base >=4.9 && <5
                  , mtl
                  , bytestring
                  , vty
                  , microlens
                  , microlens-mtl
                  , brick
  ghc-options:      -Wall -fno-warn-unused-do-bind -O3

executable vhex
  main-is:          Main.hs
  build-depends:    base, vhex
  ghc-options:      -threaded -O3
